lab6/parser.output
State 17 conflicts: 1 shift/reduce
State 48 conflicts: 2 shift/reduce
State 49 conflicts: 3 shift/reduce
State 64 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 6 shift/reduce
State 109 conflicts: 3 shift/reduce
State 110 conflicts: 3 shift/reduce
State 169 conflicts: 16 shift/reduce
State 170 conflicts: 1 shift/reduce


Grammar

    0 $accept: ComUnit $end

    1 ComUnit: Decl
    2        | FuncDef
    3        | ComUnit Decl
    4        | ComUnit FuncDef

    5 Decl: ConstDecl
    6     | VarDecl

    7 ConstDecl: CONST BasicType ConstDefs SEMICOLON

    8 ConstDefs: ConstDef
    9          | ConstDefs COMMA ConstDef

   10 ConstDef: pDeclIdentifier ASSIGN IntConst
   11         | ArrayDeclIdentifier ASSIGN LBRACE ArrayInitVal RBRACE

   12 BasicType: T_INT
   13          | T_VOID

   14 IntConst: INTEGER

   15 CompIdentifier: Identifier
   16               | ArrayIdentifier

   17 ArrayIdentifier: Identifier LBRACKET Exp RBRACKET
   18                | ArrayIdentifier LBRACKET Exp RBRACKET

   19 Identifier: IDENTIFIER

   20 DeclCompIdentifier: pDeclIdentifier
   21                   | ArrayDeclIdentifier

   22 pDeclIdentifier: DeclIdentifier

   23 ArrayDeclIdentifier: pDeclIdentifier LBRACKET INTEGER RBRACKET
   24                    | ArrayDeclIdentifier LBRACKET INTEGER RBRACKET

   25 DeclIdentifier: IDENTIFIER

   26 ArrayInitVal: IntConst
   27             | ArrayInitVal COMMA IntConst

   28 VarDecl: BasicType VarDefs SEMICOLON

   29 VarDefs: VarDef
   30        | VarDefs COMMA VarDef

   31 VarDef: DeclCompIdentifier
   32       | DeclCompIdentifier ASSIGN Exp
   33       | ArrayDeclIdentifier ASSIGN LBRACE ArrayInitVal RBRACE

   34 FuncDef: BasicType pDeclIdentifier FuncLPAREN FuncFParams RPAREN LBRACE BlockItems RBRACE
   35        | BasicType pDeclIdentifier FuncLPAREN RPAREN LBRACE BlockItems RBRACE

   36 FuncLPAREN: LPAREN

   37 FuncFParams: FuncFParam
   38            | FuncFParams COMMA FuncFParam

   39 FuncFParam: BasicType pDeclIdentifier

   40 Block: BlockLBRACE BlockItems BlockRBRACE

   41 BlockLBRACE: LBRACE

   42 BlockRBRACE: RBRACE

   43 BlockItems: BlockItem
   44           | BlockItems BlockItem

   45 BlockItem: Decl
   46          | Stmt

   47 Stmt_: LBRACE BlockItems RBRACE
   48      | Stmt

   49 Stmt: SEMICOLON
   50     | Exp SEMICOLON
   51     | Block
   52     | IF LPAREN Cond RPAREN Stmt_ ELSE Stmt_
   53     | IF LPAREN Cond RPAREN Stmt_
   54     | WHILE LPAREN Cond RPAREN Stmt_
   55     | BREAK SEMICOLON
   56     | CONTINUE SEMICOLON
   57     | RETURN SEMICOLON
   58     | RETURN Exp SEMICOLON

   59 IF: IF_

   60 WHILE: WHILE_

   61 Exp: addExp
   62    | CompIdentifier ASSIGN Exp

   63 Cond: LOrExp

   64 addExp: mulExp
   65       | addExp PLUS mulExp
   66       | addExp MINUS mulExp

   67 mulExp: unaryExp
   68       | mulExp MUL unaryExp
   69       | mulExp DIV unaryExp
   70       | mulExp MOD unaryExp

   71 unaryExp: primaryExp
   72         | NOT Cond
   73         | PLUS primaryExp
   74         | MINUS primaryExp

   75 primaryExp: IntConst
   76           | LPAREN Exp RPAREN
   77           | LPAREN Cond RPAREN
   78           | Identifier LPAREN FuncRParams RPAREN
   79           | Identifier LPAREN RPAREN
   80           | CompIdentifier

   81 FuncRParams: Exp
   82            | FuncRParams COMMA Exp

   83 LOrExp: LAndExp
   84       | LAndExp OR LOrExp

   85 LAndExp: eqExp
   86        | eqExp AND LAndExp

   87 eqExp: relExp
   88      | relExp EQ eqExp
   89      | relExp NEQ eqExp

   90 relExp: Exp
   91       | relExp GRA Exp
   92       | relExp LES Exp
   93       | relExp GRAEQ Exp
   94       | relExp LESEQ Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_INT (258) 12
    T_VOID (259) 13
    ASSIGN (260) 10 11 32 33 62
    SEMICOLON (261) 7 28 49 50 55 56 57 58
    COMMA (262) 9 27 30 38 82
    LPAREN (263) 36 52 53 54 76 77 78 79
    RPAREN (264) 34 35 52 53 54 76 77 78 79
    LBRACE (265) 11 33 34 35 41 47
    RBRACE (266) 11 33 34 35 42 47
    LBRACKET (267) 17 18 23 24
    RBRACKET (268) 17 18 23 24
    CONST (269) 7
    IF_ (270) 59
    ELSE (271) 52
    WHILE_ (272) 60
    BREAK (273) 55
    CONTINUE (274) 56
    RETURN (275) 57 58
    EQ (276) 88
    GRAEQ (277) 93
    LESEQ (278) 94
    NEQ (279) 89
    GRA (280) 91
    LES (281) 92
    PLUS (282) 65 73
    MINUS (283) 66 74
    MUL (284) 68
    DIV (285) 69
    MOD (286) 70
    AND (287) 86
    OR (288) 84
    NOT (289) 72
    IDENTIFIER (290) 19 25
    INTEGER (291) 14 23 24


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    ComUnit (38)
        on left: 1 2 3 4
        on right: 0 3 4
    Decl (39)
        on left: 5 6
        on right: 1 3 45
    ConstDecl (40)
        on left: 7
        on right: 5
    ConstDefs (41)
        on left: 8 9
        on right: 7 9
    ConstDef (42)
        on left: 10 11
        on right: 8 9
    BasicType (43)
        on left: 12 13
        on right: 7 28 34 35 39
    IntConst (44)
        on left: 14
        on right: 10 26 27 75
    CompIdentifier (45)
        on left: 15 16
        on right: 62 80
    ArrayIdentifier (46)
        on left: 17 18
        on right: 16 18
    Identifier (47)
        on left: 19
        on right: 15 17 78 79
    DeclCompIdentifier (48)
        on left: 20 21
        on right: 31 32
    pDeclIdentifier (49)
        on left: 22
        on right: 10 20 23 34 35 39
    ArrayDeclIdentifier (50)
        on left: 23 24
        on right: 11 21 24 33
    DeclIdentifier (51)
        on left: 25
        on right: 22
    ArrayInitVal (52)
        on left: 26 27
        on right: 11 27 33
    VarDecl (53)
        on left: 28
        on right: 6
    VarDefs (54)
        on left: 29 30
        on right: 28 30
    VarDef (55)
        on left: 31 32 33
        on right: 29 30
    FuncDef (56)
        on left: 34 35
        on right: 2 4
    FuncLPAREN (57)
        on left: 36
        on right: 34 35
    FuncFParams (58)
        on left: 37 38
        on right: 34 38
    FuncFParam (59)
        on left: 39
        on right: 37 38
    Block (60)
        on left: 40
        on right: 51
    BlockLBRACE (61)
        on left: 41
        on right: 40
    BlockRBRACE (62)
        on left: 42
        on right: 40
    BlockItems (63)
        on left: 43 44
        on right: 34 35 40 44 47
    BlockItem (64)
        on left: 45 46
        on right: 43 44
    Stmt_ (65)
        on left: 47 48
        on right: 52 53 54
    Stmt (66)
        on left: 49 50 51 52 53 54 55 56 57 58
        on right: 46 48
    IF (67)
        on left: 59
        on right: 52 53
    WHILE (68)
        on left: 60
        on right: 54
    Exp (69)
        on left: 61 62
        on right: 17 18 32 50 58 62 76 81 82 90 91 92 93 94
    Cond (70)
        on left: 63
        on right: 52 53 54 72 77
    addExp (71)
        on left: 64 65 66
        on right: 61 65 66
    mulExp (72)
        on left: 67 68 69 70
        on right: 64 65 66 68 69 70
    unaryExp (73)
        on left: 71 72 73 74
        on right: 67 68 69 70
    primaryExp (74)
        on left: 75 76 77 78 79 80
        on right: 71 73 74
    FuncRParams (75)
        on left: 81 82
        on right: 78 82
    LOrExp (76)
        on left: 83 84
        on right: 63 84
    LAndExp (77)
        on left: 85 86
        on right: 83 84 86
    eqExp (78)
        on left: 87 88 89
        on right: 85 86 88 89
    relExp (79)
        on left: 90 91 92 93 94
        on right: 87 88 89 91 92 93 94


State 0

    0 $accept: • ComUnit $end

    T_INT   shift, and go to state 1
    T_VOID  shift, and go to state 2
    CONST   shift, and go to state 3

    ComUnit    go to state 4
    Decl       go to state 5
    ConstDecl  go to state 6
    BasicType  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 9


State 1

   12 BasicType: T_INT •

    $default  reduce using rule 12 (BasicType)


State 2

   13 BasicType: T_VOID •

    $default  reduce using rule 13 (BasicType)


State 3

    7 ConstDecl: CONST • BasicType ConstDefs SEMICOLON

    T_INT   shift, and go to state 1
    T_VOID  shift, and go to state 2

    BasicType  go to state 10


State 4

    0 $accept: ComUnit • $end
    3 ComUnit: ComUnit • Decl
    4        | ComUnit • FuncDef

    $end    shift, and go to state 11
    T_INT   shift, and go to state 1
    T_VOID  shift, and go to state 2
    CONST   shift, and go to state 3

    Decl       go to state 12
    ConstDecl  go to state 6
    BasicType  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 13


State 5

    1 ComUnit: Decl •

    $default  reduce using rule 1 (ComUnit)


State 6

    5 Decl: ConstDecl •

    $default  reduce using rule 5 (Decl)


State 7

   28 VarDecl: BasicType • VarDefs SEMICOLON
   34 FuncDef: BasicType • pDeclIdentifier FuncLPAREN FuncFParams RPAREN LBRACE BlockItems RBRACE
   35        | BasicType • pDeclIdentifier FuncLPAREN RPAREN LBRACE BlockItems RBRACE

    IDENTIFIER  shift, and go to state 14

    DeclCompIdentifier   go to state 15
    pDeclIdentifier      go to state 16
    ArrayDeclIdentifier  go to state 17
    DeclIdentifier       go to state 18
    VarDefs              go to state 19
    VarDef               go to state 20


State 8

    6 Decl: VarDecl •

    $default  reduce using rule 6 (Decl)


State 9

    2 ComUnit: FuncDef •

    $default  reduce using rule 2 (ComUnit)


State 10

    7 ConstDecl: CONST BasicType • ConstDefs SEMICOLON

    IDENTIFIER  shift, and go to state 14

    ConstDefs            go to state 21
    ConstDef             go to state 22
    pDeclIdentifier      go to state 23
    ArrayDeclIdentifier  go to state 24
    DeclIdentifier       go to state 18


State 11

    0 $accept: ComUnit $end •

    $default  accept


State 12

    3 ComUnit: ComUnit Decl •

    $default  reduce using rule 3 (ComUnit)


State 13

    4 ComUnit: ComUnit FuncDef •

    $default  reduce using rule 4 (ComUnit)


State 14

   25 DeclIdentifier: IDENTIFIER •

    $default  reduce using rule 25 (DeclIdentifier)


State 15

   31 VarDef: DeclCompIdentifier •
   32       | DeclCompIdentifier • ASSIGN Exp

    ASSIGN  shift, and go to state 25

    $default  reduce using rule 31 (VarDef)


State 16

   20 DeclCompIdentifier: pDeclIdentifier •
   23 ArrayDeclIdentifier: pDeclIdentifier • LBRACKET INTEGER RBRACKET
   34 FuncDef: BasicType pDeclIdentifier • FuncLPAREN FuncFParams RPAREN LBRACE BlockItems RBRACE
   35        | BasicType pDeclIdentifier • FuncLPAREN RPAREN LBRACE BlockItems RBRACE

    LPAREN    shift, and go to state 26
    LBRACKET  shift, and go to state 27

    $default  reduce using rule 20 (DeclCompIdentifier)

    FuncLPAREN  go to state 28


State 17

   21 DeclCompIdentifier: ArrayDeclIdentifier •
   24 ArrayDeclIdentifier: ArrayDeclIdentifier • LBRACKET INTEGER RBRACKET
   33 VarDef: ArrayDeclIdentifier • ASSIGN LBRACE ArrayInitVal RBRACE

    ASSIGN    shift, and go to state 29
    LBRACKET  shift, and go to state 30

    ASSIGN    [reduce using rule 21 (DeclCompIdentifier)]
    $default  reduce using rule 21 (DeclCompIdentifier)


State 18

   22 pDeclIdentifier: DeclIdentifier •

    $default  reduce using rule 22 (pDeclIdentifier)


State 19

   28 VarDecl: BasicType VarDefs • SEMICOLON
   30 VarDefs: VarDefs • COMMA VarDef

    SEMICOLON  shift, and go to state 31
    COMMA      shift, and go to state 32


State 20

   29 VarDefs: VarDef •

    $default  reduce using rule 29 (VarDefs)


State 21

    7 ConstDecl: CONST BasicType ConstDefs • SEMICOLON
    9 ConstDefs: ConstDefs • COMMA ConstDef

    SEMICOLON  shift, and go to state 33
    COMMA      shift, and go to state 34


State 22

    8 ConstDefs: ConstDef •

    $default  reduce using rule 8 (ConstDefs)


State 23

   10 ConstDef: pDeclIdentifier • ASSIGN IntConst
   23 ArrayDeclIdentifier: pDeclIdentifier • LBRACKET INTEGER RBRACKET

    ASSIGN    shift, and go to state 35
    LBRACKET  shift, and go to state 27


State 24

   11 ConstDef: ArrayDeclIdentifier • ASSIGN LBRACE ArrayInitVal RBRACE
   24 ArrayDeclIdentifier: ArrayDeclIdentifier • LBRACKET INTEGER RBRACKET

    ASSIGN    shift, and go to state 36
    LBRACKET  shift, and go to state 30


State 25

   32 VarDef: DeclCompIdentifier ASSIGN • Exp

    LPAREN      shift, and go to state 37
    PLUS        shift, and go to state 38
    MINUS       shift, and go to state 39
    NOT         shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    INTEGER     shift, and go to state 42

    IntConst         go to state 43
    CompIdentifier   go to state 44
    ArrayIdentifier  go to state 45
    Identifier       go to state 46
    Exp              go to state 47
    addExp           go to state 48
    mulExp           go to state 49
    unaryExp         go to state 50
    primaryExp       go to state 51


State 26

   36 FuncLPAREN: LPAREN •

    $default  reduce using rule 36 (FuncLPAREN)


State 27
